# Mouse

./: .gitignore  Cargo.toml  README.md  perftree_script.sh
.github/workflows/: rust.yml
benches/: criterion_perft.rs  iai_perft.rs  manual_perft.rs  work.rs
gen_caches/: build.rs  cache_between.rs  caches_sliders.rs
perft_fixtures/: Cargo.toml
perft_fixtures/src/: lib.rs  perft_fixtures.rs
src/: bitboard.rs  constants.rs  lib.rs  main.rs  perft_fixture.rs  piece.rs  square.rs
src/backend/: bitboard.rs  bitboard_manager.rs  caches.rs  chess_move.rs  constants.rs  game_state.rs  mod.rs  moove.rs  move.rs  move_gen.rs  move_gen_king.rs  perft.rs  piece.rs  square.rs  util.rs
src/backend/compile_time/: caches.rs  gen_cache_king.rs  gen_caches.rs  gen_caches_non_sliders.rs  gen_caches_sliders.rs  gen_util.rs  mod.rs  move_cache_non_sliders.rs  util.rs
src/backend/game_state/: bb_manager.rs  fen_parser.rs  mod.rs  state.rs
src/backend/move_gen/: check_decider.rs  mod.rs  move_gen.rs  move_gen_king.rs  move_gen_non_sliders.rs
src/backend/move_gen/compile_time/: mod.rs
src/backend/movegen/: check_decider.rs  mod.rs  moove.rs  move_gen.rs  move_gen_king.rs  move_gen_king_util.rs  move_gen_non_sliders.rs  move_gen_pawn.rs  move_gen_pawn_util.rs  move_gen_sliders.rs
src/backend/state/: bb_manager.rs  bitboard.rs  bitboard_manager.rs  fen_parser.rs  game_state.rs  irreversible_data.rs  mod.rs  piece.rs  square.rs  state.rs
src/backend/state/board/: mod.rs  (+3 more)
src/backend/types/: bitboard.rs  mod.rs  moove.rs  piece.rs  square.rs
tests/: integration_tests.rs
(+6 files in other folders)
