[package]
name = "Mouse"
version = "0.1.0"
edition = "2024"

[lib]
name = "mouse"

[dependencies]
getset = "0.1.6"

[features]
fixtures = []

[dev-dependencies]
criterion = "0.7.0"
iai = "0.1"

[[bench]]
name = "criterion_perft"
harness = false
required-features = ["fixtures"]

[[bench]]
name = "iai_perft"
harness = false
required-features = ["fixtures"]