[package]
name = "Mouse"
version = "0.1.0"
edition = "2024"

[lib]
name = "mouse"

[dependencies]
getset = "0.1.6"

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
codegen-units = 1
lto = true

[dev-dependencies]
criterion = "0.7.0"
iai = { git = "https://github.com/sigaloid/iai", rev = "d56a597" }
perft_fixtures = { path = "perft_fixtures" }

[[bench]]
name = "criterion_perft"
harness = false

[[bench]]
name = "iai_perft"
harness = false

[[bench]]
name = "manual_perft"
harness = false