[package]
name = "Mouse"
version = "0.1.0"
edition = "2024"
build = "build/build.rs"

[lib]
name = "mouse"

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
codegen-units = 1
lto = true

[dev-dependencies]
criterion = "0.8.2"
iai = { git = "https://github.com/sigaloid/iai", rev = "d56a597" }
perft_fixtures = { path = "perft_fixtures" }

[[bench]]
name = "criterion_perft"
harness = false

[[bench]]
name = "iai_perft"
harness = false

[[bench]]
name = "manual_perft"
harness = false